<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_outline_credit_card_24"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/placeholder"
        android:title="" />

    <item
        android:id="@+id/navigation_service"
        android:icon="@drawable/ic_outline_dashboard_24"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_outline_settings"
        android:title="@string/title_setting" />

</menu>