<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.myapplication.ui.account.AccountFragment"
        android:label="@string/deposit_title"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_service"
        android:name="com.example.myapplication.ui.services.ServicessFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_services" />
    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.myapplication.ui.setting.SetttingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>