<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.AccountFragment">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/top_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
      >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/text_accounttitle"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:text="@string/deposit_title"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:id="@+id/btn_top"
                android:layout_marginEnd="16dp"
                android:contentDescription="ButtonMenu"

                android:src="@drawable/ic_round_list_24"
                android:textAlignment="viewEnd"
             />


        </LinearLayout>
        <ProgressBar
            android:layout_width="match_parent"
            android:id="@+id/progress_circular"
            android:layout_height="match_parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rc_view_top"
            android:visibility="gone"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/subitem_vertical_margin"
            android:layout_marginEnd="@dimen/subitem_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:text="4/4"
            android:id="@+id/text_page"
            android:layout_marginTop="1dp"
            android:layout_gravity="center"
            android:layout_marginBottom="2dp"
            android:layout_height="wrap_content"/>
<!--        /////Middle Content///////-->
        <LinearLayout
            android:id="@+id/linear_mid_menu"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:weightSum="4"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:background="@drawable/navbar_border_rac"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:id="@+id/transfer_menu"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/transfer_icon"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transfer_text"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:id="@+id/top_up_menu"
                android:layout_gravity="center"
                android:layout_weight="1"

                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/item_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/top_up_icon"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transfer_text"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:id="@+id/bill_menu"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:layout_weight="1"

                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/item_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/bill_icon"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transfer_text"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:id="@+id/more_menu"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:layout_weight="1"

                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/item_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/more_icon"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transfer_text"/>

            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/text_transection"
            android:layout_width="320dp"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/transaction_title"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />
        <LinearLayout
            android:id="@+id/linear_transactions"
            android:orientation="vertical"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:background="@drawable/navbar_border_rac"
            android:layout_marginBottom="50dp"
            android:layout_height="wrap_content">
            <ProgressBar
                android:layout_width="match_parent"
                android:id="@+id/progress_circular_statement"
                android:visibility="visible"
                android:layout_height="match_parent"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_margin="@dimen/activity_horizontal_margin"
                tools:listitem="3"
                android:id="@+id/recycleView_transaction"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/text_request"
                android:layout_width="wrap_content"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:text="@string/request_title"
                android:textColor="@color/blue_bg"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>